# classification-bank-churn

./: .gitignore  pyproject.toml
projets/: classification-bank-churn.ipynb
